experiment_output/error_log/nondex-violetwei-Event-Registration-App:EventRegistration-Backend.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1045/wd/NonDex-plugin-test/github.com/violetwei/Event-Registration-App/EventRegistration-Backend/src/main/java/ca/mcgill/ecse321/eventregistration/EventRegistrationApplication.java:20: error: reached end of file while parsing
}
 ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':EventRegistration-Backend:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 11s
